Fixing spacing.

--- a/2016/css/stateface.css
+++ b/2016/css/stateface.css
@@ -1,6 +1,6 @@
 .stateface:before {
     font-family: StateFaceRegular;
-    margin-left: 0.25em;
+    margin-right: 0.25em;
 }
 
 .stateface-replace {
